resources/css/style.css
* {
  text-align: center;
  font-family: Helvetica;
}

h1 {
  font-size: 70px;
  font-weight: bold;
}
nav {
  font-size: 18px;
}

h2 {
  font-size: 32px;
  font-weight: bold;
  color: black;
}

h3 {
  font-size: 23px;
  font-weight: bold;
  color: black;
}

p {
  font-size: 14px;
  color: black;
}

.white {
  color: white;
}

.flatiron {
  background-image: url(../resources/images/the-flatiron-building.png);
}

.foot {
  text-align: left;
  font-size: 11px;
  background-color: dimgray;
}

#footwhite {
  color: white;
  background-color: dimgray;
}

